# coda

./: .gitignore  .indent.pro.in  CHANGES  CITATION.cff  CMakeLists.txt  COPYING  DEVELOPER  FAQ  INSTALL  LICENSES  Makefile.am  README  bootstrap  cmakeify-dot-infiles.pl  coda2tdf.py  codadef.sh  config.h.cmake.in  configure.ac  cpack_wix_patch.xml  docjava.mk  doclibcoda.mk  doclibqiap.mk  findtypedef.l  unix2dos  vsnprintf.c
CMakeModules/: CheckTypeExists.cmake  FindHDF4.cmake  FindHDF5.cmake  FindJPEG.cmake  FindNUMPY.cmake  FindNumPy.cmake  FindPython.cmake  FindSZIP.cmake  FindZLIB.cmake
doc/html/: index.html
doc/html/coda-fortran/: index.html
doc/html/coda-idl/: index.html
doc/html/coda-matlab/: index.html
doc/html/coda-python/: index.html
doc/html/codacheck/: index.html
doc/html/codacmp/: index.html
doc/html/codadd/: index.html
doc/html/codadef/: codadef-cdf.html  codadef-expressions.html  codadef-format.html  codadef-grib.html  codadef-hdf4.html  codadef-hdf5.html  codadef-netcdf.html  codadef-rinex.html  codadef-sp3.html  codadef-sp3c.html  codadef-xml.html
doc/html/codadump/: index.html
doc/html/codaeval/: index.html
doc/html/codafind/: index.html
doc/html/css/: codadef.css  codadoc.css  qiap.css
doc/html/fortran/: index.html
doc/html/idl/: index.html
doc/html/java/: annotated.html  class_array_ordering_enum.html  class_format_enum.html  class_native_type_enum.html  class_special_type_enum.html  class_type_class_enum.html  classes.html  classnl_1_1stcorp_1_1coda_1_1_coda-members.html  classnl_1_1stcorp_1_1coda_1_1_coda.html  classnl_1_1stcorp_1_1coda_1_1_coda_exception-members.html  classnl_1_1stcorp_1_1coda_1_1_coda_exception.html  classnl_1_1stcorp_1_1coda_1_1_cursor-members.html  classnl_1_1stcorp_1_1coda_1_1_cursor.html  classnl_1_1stcorp_1_1coda_1_1_expression-members.html  classnl_1_1stcorp_1_1coda_1_1_expression.html  classnl_1_1stcorp_1_1coda_1_1_product-members.html  doxygen_crawl.html  index.html  (+5 more)
fortran/: Makefile.in  checkf77.sh  coda.inc  coda_fortran.c  example.f  generate-finc.c
idl/: coda-idl.c  coda-idl.dlm.in  coda_idl.c  coda_idl.dlm.in
java/: CodaExample.java  CodaTest.java  build.xml.in  coda_ignore.i  coda_jni.c  coda_rename.i  codac.i
java/doc/: Doxyfile.in  extrapages  extrapages.txt  footer.html  header.html
libcoda/: coda-ascbin-cursor.c  coda-ascbin-definition.c  coda-ascbin-definition.h  coda-ascbin-internal.h  coda-ascbin-type.c  coda-ascbin.c  coda-ascbin.h  coda-ascii-cursor.c  coda-ascii-definition.c  coda-ascii-definition.h  coda-ascii-internal.h  coda-ascii-type.c  coda-ascii.c  coda-ascii.h  coda-bin-cursor.c  coda-bin-definition.c  coda-bin-definition.h  coda-bin-internal.h  coda-bin-type.c  coda-bin.c  coda-bin.h  coda-cdf-cursor.c  coda-cdf-internal.h  coda-cdf-type.c  coda-cdf.c  coda-cdf.h  coda-check.c  coda-cursor-read.c  coda-cursor.c  coda-definition-parse.c  coda-definition.c  coda-definition.h  coda-detection.c  coda-errno.c  coda-expr-internal.h  coda-expr-parser.y  coda-expr-tokenizer.l  coda-expr.c  coda-expr.h  coda-filefilter.c  (+72 more)
libcoda/doc/: Doxyfile.in  extrapages  extrapages.txt  footer.html  header.html  libcoda_footer.html
libcoda/expat/: README  coda_expat_mangle.h  expat_external.h  internal.h  siphash.h  xmlparse.c  xmlrole.c  xmltok.c  xmltok_impl.c  xmltok_ns.c
libcoda/pcre/: README  coda_pcre_config.h  coda_pcre_mangle.h  pcre.h  pcre_config.c  pcre_internal.h
libcoda/pcre2/: README  coda_pcre2_config.h  coda_pcre2_mangle.h  pcre2.h  pcre2_config.c  pcre2_internal.h
libcoda/qiap/: README  coda-qiap.c  coda-qiap.h  qiap-query.c  qiap-report-read.c  qiap-report-write.c  qiap-soap-read.c  qiap.c  qiap.h
libcoda/zlib/: COPYING  README  coda_zlib_mangle.h  zconf.h
m4/: ccopt.m4  codadef.m4  idl.m4  java.m4  matlab.m4  numpy.m4  python.m4  systemstubs.m4  tls.m4  warnings.m4  wrapfortran.m4  zlib.m4
matlab/: coda-matlab-getdata.c  coda-matlab-traverse.c  coda-matlab.h  coda_attributes.m  coda_class.m  coda_clearall.m  coda_close.m  coda_description.m  coda_eval.m  coda_fetch.m  coda_fieldavailable.m  coda_fieldcount.m  coda_fieldnames.m  coda_getopt.m  coda_matlab.c  coda_open.m  coda_open_as.m  coda_options.m  coda_param.m  coda_product_class.m  coda_product_type.m  coda_product_version.m  coda_setopt.m  coda_size.m  coda_time_to_string.m  coda_unit.m  coda_version.m  mxCreateDoubleScalar.c  mxCreateNumericMatrix.c
python/: __init__.py  _codac.py  build.py  coda_ignore.i  coda_rename.i  coda_typemaps.i  codac.c  codac.i  codac.py  codapython.py
python/cffi/: __init__.py  _codac.py  _codapy.py  cmp.sh  codapython.py  example.py  oo-example.py
python/coda/: __init__.py
recipe/: README  build.sh  meta.yaml
test/: README.rst  test.py
test/definitions/: CODA_TEST-20161219.codadef
test/products/: left.nc
tools/codacheck/: codacheck.c
tools/codacmp/: codacmp.c
tools/codadd/: codadd-definition.c  codadd-detect.c  codadd-doc.c  codadd-list.c  codadd-xmlschema.c  codadd.c
tools/codadump/: codadump-ascii.c  codadump-debug.c  codadump-dim.c  codadump-filter.c  codadump-filter.h  codadump-hdf4.c  codadump-json.c  codadump-traverse.c  codadump-yaml.c  codadump.c  codadump.h
tools/codaeval/: codaeval.c
tools/codafind/: codafind.c
win32/: ModifyPath.iss  coda-idl.def  coda.dsw  coda.iss.in  coda_idl.bat  coda_java.bat  coda_matlab.bat  codacheck.dsp  codacmp.dsp  codadd.dsp  codadll.dsp  codadump.dsp  codaeval.dsp  codafind.dsp  codajava.dsp  codalib.dsp  codapython.dsp  config.h.cmake.in  config.h.in  makedist.bat  mexopts.bat  removepath.iss  setup.py.in
windows/: clean_dir.bat  coda.iss.in  coda.sln  codacheck.vcproj  codacmp.vcproj  codadd.vcproj  codadll.vcproj  codadump.vcproj  codaeval.vcproj  codafind.vcproj  codaidl.vcproj  codajava.vcproj  codalib.vcproj  codamatlab.vcproj  codapython.vcproj  codawin32.iss.in  codawin64.iss.in  config.h.in  create_installer.bat  make_coda_all.bat  make_coda_idl.bat  make_coda_java.bat  make_coda_libraries.bat  make_coda_matlab.bat  make_coda_python.bat  make_coda_tools.bat  modifypath.iss  setup.py.in
(+41 files in other folders)
